--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,14 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-numpy = "^2.2.0"
+numpy = "1.26.4"
 pandas = "^2.2.3"
 polars = "^1.17.0"
 matplotlib = "^3.9.3"
 scikit-learn = "^1.5.2"
+lightgbm = "^4.5.0"
+catboost = "^1.2.7"
+pyarrow = "^18.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
